[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu2.gd" type="Script" id=1]
[ext_resource path="res://asset/Imagenes/carte.png" type="Texture" id=2]
[ext_resource path="res://guerrero.tscn" type="PackedScene" id=3]
[ext_resource path="res://maga.tscn" type="PackedScene" id=4]

[node name="menu2" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 652.386
margin_top = 88.4939
margin_right = 1533.39
margin_bottom = 1466.49
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 124.0
margin_top = 79.0
margin_right = 1005.0
margin_bottom = 1537.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 271.321, 286.395 )

[node name="Node2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 836.574, 299.961 )
[connection signal="personaje1" from="." to="Node2D" method="_on_menu2_personaje1"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
